Fix contrast color checks errors

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ section {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #575757;
   padding-top: 10px;
 }
 
@@ -171,7 +171,7 @@ img:hover {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
-  color: #7a869a;
+  color: #4b5563;
 }
 
 .access-project {
@@ -197,7 +197,7 @@ img:hover {
   background-color: #ebebff;
   border-radius: 8px;
   padding: 4px 12px;
-  color: #6070ff;
+  color: #4d4d4d;
   letter-spacing: 0.03em;
   font-style: normal;
   font-weight: 500;
@@ -274,7 +274,7 @@ button:hover {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #0f27ff;
   margin-top: 5px;
 }
 
@@ -355,6 +355,7 @@ button:hover {
 
 .p-tag {
   color: white;
+  background-color: #0f2bff;
   text-align: center;
   font-size: 20px;
   transform: scale(1);
